--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -498,7 +498,7 @@ Microdata and microformats work in a similar way. Not only CMSs emplyoed by the 
 \label{technical-architecture-challenges:proposal:integration}
 The \textit{\textbf{data source tier}} represents diverging data sources, which may be part of the information environment of a university. The \textit{\textbf{integration tier}} shows how to integrate the demanded and available datasets of those data sources into the system. The integration process consists of multiple steps, which are described in the following.
 
-\paragraph{Data acquisition} is the first step of the integration process and is required for acquiring the data that shall be integrated into the system. According to Simperl et.al.\cite{simperl_using_2013}\cite{heath_linked_2011} there are number of ways, in which the data consumed and integrated within the system may be accessed. The approach used for this proposed architecture is the \textit{crawling pattern}, where the data is acquired in advance and afterwards the acquired data is integrated and cleansed. The disadvantage of this pattern is that the data will be replicated and might not be up to date. Nevertheless, \enquote{the crawling pattern is suitable for implementing applications on top of an open, growing set of sources}\cite{heath_linked_2011}, which is beneficial for systems that shall integrate public resources of a university. An alternative approach is the \textit{On-The-Fly Dereferencing pattern}, \enquote{where the URIs are dereferenced at the moment that the system requires the data}; no local storage is needed. The advantage is up-to-date data, but the performance may be very slow in dependence of how costly gathering and transforming the demanded data is.
+\paragraph{Data acquisition} is the first step of the integration process and is required for acquiring the data that shall be integrated into the system. According to Simperl et.al.\cite{simperl_using_2013}\cite{heath_linked_2011} there are number of ways, in which the data consumed and integrated within the system may be accessed. The approach used for this proposed architecture is the \textit{crawling pattern}, where the data is acquired in advance and afterwards the acquired data is integrated and cleansed. The disadvantage of this pattern is that the data will be replicated and might not be up to date. Nevertheless, \enquote{the crawling pattern is suitable for implementing applications on top of an open, growing set of sources}\cite{heath_linked_2011}, which is beneficial for systems that shall integrate public resources of a university. An alternative approach is the \textit{On-The-Fly Dereferencing pattern}, \enquote{where the URIs are dereferenced at the moment that the system requires the data}; no local storage is needed. The advantage is up-to-date data, but the performance may be very slow in dependence of how costly it is to gather and transform the demanded data.
 
 %\subparagraph{Physical wrapper:}
 
