--- a/literature.bib
+++ b/literature.bib
@@ -267,3 +267,21 @@
 	year = {2008},
 	keywords = {refsw}
 }
+
+@inproceedings{isele_ldspider:_2010,
+	title = {{LDspider}: {An} open-source crawling framework for the {Web} of {Linked} {Data}},
+	booktitle = {Proceedings of the 2010 {International} {Conference} on {Posters} \& {Demonstrations} {Track}-{Volume} 658},
+	publisher = {CEUR-WS. org},
+	author = {Isele, Robert and Umbrich, Jürgen and Bizer, Christian and Harth, Andreas},
+	year = {2010},
+	pages = {29--32}
+}
+
+@inproceedings{isele_ldspider:_2010-1,
+	title = {{LDspider}: {An} open-source crawling framework for the {Web} of {Linked} {Data}},
+	booktitle = {Proceedings of the 2010 {International} {Conference} on {Posters} \& {Demonstrations} {Track}-{Volume} 658},
+	publisher = {CEUR-WS. org},
+	author = {Isele, Robert and Umbrich, Jürgen and Bizer, Christian and Harth, Andreas},
+	year = {2010},
+	pages = {29--32}
+}
