--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -2,6 +2,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
+\usepackage{float}
 \usepackage{graphicx}
 \usepackage{csquotes}
 \usepackage{url}
@@ -487,7 +488,7 @@ Microdata and microformats work in a similar way. Not only CMSs emplyoed by the 
 
 \paragraph{Linked Open Data:} The Linked Open Data cloud (see figure \ref{fig:lod-cloud-diagram}) visualizes datasets of various domains that have been published in Linked Data format (2014)\cite{_linking_????}. Berners-Lee emphasizes in his principles for publishing Linked Data that the data shall be interlinked with external linked data to give context. Hence, the gathering of particular linked datasets must also be considered by the technical architecture for the purpose of interlinking. The ways in which linked data is exposed can diverge. It can be a SPARQL endpoint (see \ref{technical-architecture-challenges:proposal:provision}), a Web API, or a RDF dump possibly published on a repository like \texttt{datahub.io}. For example, the European Library\footnote{\url{http://theeuropeanlibrary.org}} manages the collections of national libraries as well as research libraries of Europe and exports them regularly into a single RDF file (dump). The academic library of the university could interlink items of it`s own collection with the matching items of the European Library project. As a result, the academic library enriches it`s own knowledge about this item with the collected knowledge of the European Library project (e.g. contributors).
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering \includegraphics*[width=1.0\columnwidth]{images/technical-architecture/lod-cloud_colored_1000px.png}
 \caption{LOD cloud diagram of the year 2014}
 \label{fig:lod-cloud-diagram}
@@ -500,12 +501,9 @@ The \textit{\textbf{data source tier}} represents diverging data sources, which 
 
 \paragraph{Data acquisition} is the first step of the integration process and is required for acquiring the data that shall be integrated into the system. According to Simperl et.al.\cite{simperl_using_2013}\cite{heath_linked_2011} there are number of ways, in which the data consumed and integrated within the system may be accessed. The approach used for this proposed architecture is the \textit{crawling pattern}, where the data is acquired in advance and afterwards the acquired data is integrated and cleansed. The disadvantage of this pattern is that the data will be replicated and might not be up to date. Nevertheless, \enquote{the crawling pattern is suitable for implementing applications on top of an open, growing set of sources}\cite{heath_linked_2011}, which is beneficial for systems that shall integrate public resources of a university. An alternative approach is the \textit{On-The-Fly Dereferencing pattern}, \enquote{where the URIs are dereferenced at the moment that the system requires the data}; no local storage is needed. The advantage is up-to-date data, but the performance may be very slow in dependence of how costly it is to gather and transform the demanded data.
 
-%\subparagraph{Physical wrapper:}
+\subparagraph{Wrapper:} If a service provides demanded data in a way in which it is not ready to be integrated into the system, a wrapper is required. Web APIs for example often provide heterogeneous query interfaces to access data and return results in a number of formats like JSON, XML or ATOM. A wrapper requests the data and translates into a form that is suitable for the further integration process; ready for the vocabulary mapping.
 
-%\subparagraph{Crawling for RDFa and microdata:}
-
-%\subparagraph{Linked Data wrapper:}
-
+\subparagraph{Crawling for RDFa and microdata:} Information published on Web sites in a machine-readable form using RDFa or microdata must be extracted from these sites in order to integrate it. A tool to crawl for all this machine-readable information is LDSpider\footnote{\url{https://github.com/ldspider/ldspider}}. LDSpider can process a variety of Web data formats including RDF/XML, Turtle, Notation 3 and RDFa~\cite{isele_ldspider:_2010}.
 
 \paragraph{Vocabulary mapping} is the second step of the integration process. In this step the acquired data is translated into the system`s target schema (in section \ref{technical-architecture-challenges:proposal:vocabulary} a collection of vocabularies that may be of interest for a university`s domain is listed). The translation is definitely necessary for acquired data that has not already be transformed into Linked Data. For the proposed technical architecture, this would be the case for (semi-)structured datasets like CSV or XML. In the following, some tools are listed for transforming (semi-)structured datasets into Linked Data.
 
@@ -623,9 +621,9 @@ The second known use case from other universities that was proposed to the stude
 
 In general, the students has been unsatisfied with the way how organizational information is shared with them. Which is why the proposed use cases of the students were concerned with this issue. A proposed use case was a course calendar that manages all course events not only lecture times as well as an event calendar that give the user an overview of all planned events of university organizations. Furthermore, a use case that provides course information from different sources including VOWI (wiki employed by students) and internet forums was proposed.
 
-Final, the willingness of the students to develop own applications based on Linked Data exposed by the university was evaluated. Overall, the interviewees were more or less cautious regarding this question, but most of them were willed to. One student mentioned that (s)he is willed to if the university provide some incentives. This incentive may not only be aid for innovative applications, but also to allow students to build applications based on university Linked Open Data as practical project in courses, where the have to be carried out. Due to the fact that informatics is one of the science fields taught by the TU Vienna, there are some course where this approach can applied; Advanced Software Engineering, Introduction to Semantic Web, SAIKS and SENIC projects. The students showed that they are not completely satisfied with the information environment of the university and have also some ideas to change this.
+Final, the willingness of the students to develop own applications based on Linked Data exposed by the university was evaluated. Overall, the interviewees were more or less cautious regarding this question, but most of them were willed to. One student mentioned that (s)he is willed to if the university provide some incentives. This incentive may not only be aid for innovative applications, but also to allow students to build applications based on university Linked Open Data as practical project in courses, where the have to be carried out. Due to the fact that informatics is one of the science fields taught by the TU Vienna, there are some courses where this approach can applied; Advanced Software Engineering, Introduction to Semantic Web, SAIKS and SENIC projects.In summary, the students showed that they are not completely satisfied with the information environment of the university and have also some ideas to change this.
 
-\paragraph{Research question 3:} One major issue for implementing a system that exposes public resources of the university as Linked Open Data is \textbf{\textit{data ownership}}. There may be diverging data owners, because there might be independent services at the university that handle a particular part of the domain. At larger universities they may also spread their services across several departments. Consequently, to expose a public resource of a university as Linked Open Data the data owners may have to be explored. A further minor challenge are \textbf{\textit{data licenses}}. In order to integrate machine-readable data from public web sites of the university it is advisable to also contact the owner if the license statement is missing. Conversely, the university has to include license agreements for each exposed linked data. A major challenge is \textbf{\textit{data freshness}}, especially for the pattern used by the proposed architecture of this paper. The system designer has to choose the update intervals thoughtfully to satisfy the needs of the application developer regarding performance and data freshness. \textit{\textbf{Data quality}} assessments should be kept in mind, if data exposed on the Web is integrated into the system.
+\paragraph{Research question 3:} One major issue for implementing a system that exposes public resources of the university as Linked Open Data is \textbf{\textit{data ownership}}. There may be diverging data owners, because there might be independent services at the university that handle a particular part of the domain. At larger universities they may also spread their services across several departments. Consequently, the data owners may have to be explored to expose a public resource of a university as Linked Open Data. A further minor challenge are \textbf{\textit{data licenses}}. In order to integrate machine-readable data from public web sites of the university it is advisable to also contact the owner if the license statement is missing. Conversely, the university has to include license agreements for each exposed linked dataset. A major challenge is \textbf{\textit{data freshness}}, especially for the pattern used by the proposed architecture of this paper. The system designer has to choose the update intervals thoughtfully to satisfy the needs of the application developer regarding performance and data freshness. \textit{\textbf{Data quality}} assessments should be kept in mind, if data exposed on the Web is integrated into the system.
 
 \paragraph{Research question 4:} The evolvement of a Linked Open Data effort at a university depends on the current information environment at the university and the demand of stakeholders like students for applications based on Linked Open Data. This results in a demand for exposing public university resources that are required by such applications as Linked Open Data. The technical architecture proposed in section \ref{technical-architecture-challenges:proposal} focuses on this part of the publication framework. The information environments may consist of diverging data source with different formats and data owners. The technical architecture has to face this diverging data sources and has to provide an interface to integrate them. The proposed system uses a \textit{crawling pattern}, so the data is acquired and integrated into a central triple store in advance. An alternative approach is the \textit{On-The-Fly-Referencing pattern}, where the data is accessed and transformed, when the data is requested; this can lead to scalability issues.\cite{heath_linked_2011} There are different ways to grant the end user access to the data stored in the triple store. The most convenient way for both the human reader and the application might be a Content Management System enriched with RDFa like described in section \ref{technical-architecture-challenges:proposal:provision} in combination with a SPARQL endpoint like on DBPedia. A disadvantage is the higher cost of development in comparison to a simple SPARQL endpoint; most common triple stores come with a SPARQL endpoint. 
 
@@ -636,7 +634,7 @@ Final, the willingness of the students to develop own applications based on Link
  
 \section{Acknowledgement}
 \label{acknowledgement}
-The author would like to thank Fachschaft Informatik, Faustmann Georg, Dominik Moser, Siebenhandl Hannes and Schumacher Barbara for taking part in the case study and for sharing your ideas and thoughts.
+The author would like to thank Fachschaft Informatik, Faustmann Georg, Dominik Moser, Siebenhandl Hannes and Schumacher Barbara for taking part in the case study and for sharing your ideas and thoughts. Further thanks go to Assoc. Prof. Dr. Stefan Biffl and Dr. Marta Sabou for supervising this work; especially for the encouragement to provide good feedback and advices.
 
 % -------------------------------------------------------------------------------------------
 %  Bibliography of main content
